Fixed bug with ParaView freezing
When launched from the Preferences menu, ParaView would freeze after a
few minutes do to exhausting its IO buffer. EAVP now consumes ParaView's
output and error streams to avoid this problem. 

Signed-off-by: Robert Smith <smithrw@ornl.gov>